# toad

./: .clippy.toml  .env.example  .gitignore  AI_CODING_AGENTS_RESEARCH_REPORT.md  AI_TODO.md  ANTHROPIC_INTEGRATION_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_DATA_ANALYSIS.md  ARCHITECTURE_REALITY_CHECK.md  ATOMIC_DESIGN_COMPLETION_PLAN.md  ATOMIC_DESIGN_MIGRATION.md  AUDIT_REPORT.md  BASIC_FEATURE_TEST_COMPLETION_FINAL.md  BASIC_FEATURE_TEST_COVERAGE_AUDIT.md  BASIC_TESTS_100_PERCENT_COMPLETE.md  BASIC_TEST_COVERAGE_FINAL.md  BASIC_TEST_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  E2E_TESTING_REPORT.md  EVALUATION_CENTER_DESIGN.md  EVALUATION_CENTER_PLAN.md  EXECUTIVE_SUMMARY.md  FEATURE_CHECKLIST_DEPENDENCY_ORDERED.md  FINAL_QUALITY_REPORT.md  ITERATIVE_IMPLEMENTATION_PLAN.md  LLM_CONTEXT_OPTIMIZATION_RESEARCH.md  M0_FINAL_AUDIT.md  M0_README.md  M0_VALIDATION.md  M1_BASELINE_RESULTS.md  M1_IMPLEMENTATION_SUMMARY.md  MEDIUM_PHASE_1_COMPLETE.md  MEDIUM_TIER_EDGE_CASE_ANALYSIS.md  OLLAMA_SETUP.md  PHASE_A_EXECUTION_PLAN.md  PLATINUM_FEATURES_REPORT.md  PLUGIN_MARKETPLACE_ARCHITECTURE.md  PROJECT_INITIALIZATION_GUIDE.md  (+21 more)
.claude/: settings.local.json  skill-rules.json
.claude/agents/: cargo-error-resolver.md  project-initializer.md  rust-code-reviewer.md  rust-security-auditor.md  rust-testing-expert.md  strategic-plan-architect.md  test-coverage-analyzer.md
.claude/commands/: init-automation.md
.claude/hooks/: post-tool-use.ts  stop.ts  user-prompt-submit.ts
.claude/skills/: rust-dev-guidelines.md
dev/: DOMAIN_DRIVEN_STRUCTURE.md  ROADMAP_V2.md  WIDGET_MIGRATION_TEMPLATE.md
src/: advanced_search.rs  aliases.rs  animations.rs  app.rs  async_ops.rs  autocomplete.rs  background_tasks.rs  batch_ops.rs  bookmarks.rs  box_drawing.rs  bug.py  canvas.rs  clipboard.rs  command_mode.rs  config.rs  custom_keybindings.rs  diff.rs  errors.rs  event.rs  file_ops.rs  fixed.rs  fuzzy.rs  history.rs  key_sequences.rs  keybinds.rs  layout.rs  lazy_render.rs  lib.rs  live_graphs.rs  logo.rs  macros.rs  main.rs  marks.rs  mouse.rs  multicursor.rs  nerd_fonts.rs  performance.rs  quick_actions.rs  recent_files.rs  resizable.rs  (+14 more)
src/agent/: mod.rs  prompts.rs
src/ai/: eval_commands.rs  eval_runner.rs  mod.rs
src/benchmarks/: livecodebench.rs  mod.rs  orchestrator.rs  swebench.rs  types.rs
src/commands/: aliases.rs  autocomplete.rs  command_mode.rs  mod.rs  quick_actions.rs  slash_parser.rs  smart_suggestions.rs
src/config/: accessibility.rs  mod.rs  tui.rs  tui_config.rs
src/core/: app.rs  app_accessors.rs  app_ai.rs  app_approvals.rs  app_commands.rs  app_evaluation.rs  app_session.rs  app_state.rs  event.rs  mod.rs  tui.rs  ui.rs
src/editor/: external.rs  macros.rs  marks.rs  mod.rs  multicursor.rs  undo.rs  vim_motions.rs  visual_selection.rs
src/evaluation/: dataset_manager.rs  experiment_manager.rs  mod.rs  task_loader.rs
src/git/: auto_commit.rs  graph_service.rs  mod.rs  service.rs
src/infrastructure/: achievements.rs  advanced_mouse.rs  ai_task_intelligence.rs  async_ops.rs  background_tasks.rs  batch_ops.rs  builtin_automation.rs  calendar_integration.rs  card_comments.rs  communication_integrations.rs  cross_window_context.rs  custom_keybindings.rs  custom_reports.rs  dashboard_metrics.rs  data_portability.rs  diff.rs  errors.rs  fallback_mode.rs  file_attachments.rs  file_ops.rs  filtering_search.rs  git_card_integration.rs  history.rs  import_export.rs  key_sequences.rs  keyboard_recorder.rs  keyboard_shortcuts.rs  mod.rs  mouse.rs  multiple_views.rs  plugin_system.rs  project_management.rs  rich_task_cards.rs  task_dependencies.rs  team_collaboration.rs  terminal_capabilities.rs  text_truncation.rs  time_tracking.rs  validation.rs  visual_kanban_board.rs
tests/: advanced_e2e_scenarios.rs  agent_mock_integration_tests.rs  ai_filemanagement_integration_tests.rs  animation_mode_workspace_integration_tests.rs  chart_input_widget_integration_tests.rs  charts_git_integration_tests.rs  cli_evaluation_integration_tests.rs  e2e.rs  e2e_test_scenarios.rs  file_ai_features_integration_tests.rs  git_widget_integration_tests.rs  integration_test.rs  m0_m1_mock_evaluation_tests.rs  m0_validation_tests.rs  medium_tier_integration_tests.rs  modal_smart_features_integration_tests.rs  orchestrator_integration_tests.rs  platinum_widget_integration_tests.rs  power_user_integration_tests.rs  session_filetree_integration_tests.rs  smart_features_integration_tests.rs  tui_e2e_tests.rs  ui_ux_widget_integration_tests.rs  visual_vim_undo_integration_tests.rs  visualization_integration_tests.rs
(+417 files in other folders)
