[package]
name = "toad"
version = "0.1.0"
edition = "2024"
authors = ["Toad Contributors"]
description = "AI-powered coding terminal with semi-autonomous agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trickstertwo/toad"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Error Handling
anyhow = "1.0"
color-eyre = "0.6"
thiserror = "2.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
dotenvy = "0.15"
dirs = "6.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Clipboard
copypasta = "0.10"

# Statistics
statrs = "0.18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
pin-project = "1.1"

# Tree-sitter for AST parsing (M2 Context) and syntax highlighting
tree-sitter = "0.25.10"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24.0"
tree-sitter-highlight = "0.25.10"
streaming-iterator = "0.1"

# LRU cache for AST results
lru = "0.16.2"

# Compression
flate2 = "1.0"

# Parquet support for SWE-bench datasets
parquet = "57.0.0"
arrow = "57.0.0"

# Testing
mockall = "0.13.1"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
